[tool.poetry]
name = "durc"
version = "0.1.0"
description = ""
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
ansible = "^2.8"
ansible-runner = "^1.3"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "*"
flake8 = "^3.7"
ipython = "^7.7"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
